--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ classifiers = [
 Changelog = "https://github.com/pauleveritt/themester/releases"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.10"
+MarkupSafe = "^2.1.0"
+hopscotch = "^0.1.4"
+viewdom = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
