--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,8 @@ classifiers = [
     "Development Status :: 3 - Alpha",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.10",
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
     "MarkupSafe~=2.1.0",
     "hopscotch~=0.3.0",
@@ -93,7 +92,7 @@ dependencies = [
     ]
 
 [[tool.hatch.envs.test.matrix]]
-python = ["3.10", "3.11", "3.12"]
+python = ["3.11", "3.12"]
 
 [[tool.hatch.envs.pre-commit.matrix]]
 python = ["3.12"]
