--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,6 +124,8 @@ run = "hatch -e safety.py3.12 dep show requirements | safety check --full-report
 
 [tool.hatch.envs.docs-build.scripts]
 run = "sphinx-build docs docs/_build"
+autobuild = "sphinx-autobuild docs docs/_build"
+autonullster = "sphinx-autobuild --port 8088 tests/sphinx/roots/test-nullster-setup tests/sphinx/roots/test-nullster-setup/_build"
 
 [tool.ruff]
 line-length = 88
