--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,155 +1,35 @@
 [project]
 name = "themester"
-dynamic = ["version"]
-build-targets = ["wheel"]
-description = "Themester"
-authors = [{ name = "Paul Everitt", email = "pauleveritt@me.com" }]
-license = "MIT"
-readme = "README.rst"
-homepage = "https://github.com/pauleveritt/themester"
-repository = "https://github.com/pauleveritt/themester"
-documentation = "https://themester.readthedocs.io"
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.11",
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+authors = [
+    { name = "pauleveritt", email = "pauleveritt@me.com" }
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.14"
 dependencies = [
-    "MarkupSafe~=2.1.0",
-    "hopscotch~=0.3.0",
-    "viewdom~=0.6.3",
+    "furo>=2025.7.19",
+    "markupsafe",
+    "myst-parser>=4.0.1",
+    "sphinx",
+    "svcs",
+    "venusian",
 ]
-
-[tool.hatch.urls]
-Changelog = "https://github.com/pauleveritt/themester/releases"
-
-
-[tool.hatch.version]
-path = "src/themester/version.py"
-
-[tool.hatch.envs.test]
-dependencies = [
-    "typeguard~=2.13.3",
-    "pytest~=7.4.3",
-    "sybil~=3.0.1",
-    "coverage[toml]~=6.3",
-    "pytest-cov~=4.1.0",
-    "ruff~=0.1.8",
-    "ruff-lsp~=0.0.45",
-    "sphinx~=4.4.0",
-    "beautifulsoup4~=4.12.2"
-]
-
-[tool.hatch.envs.pre-commit]
-dependencies = [
-    "ruff~=0.1.8",
-    "pre-commit~=3.5.0",
-    "pre-commit-hooks~=4.1.0",
-]
-
-[tool.hatch.envs.mypy]
-dependencies = [
-    "mypy~=1.7",
-]
-
-[project.scripts]
-themester = "themester.__main__:main"
-
-[tool.coverage.paths]
-source = ["src", "*/site-packages"]
-tests = ["tests", "*/tests"]
-
-[tool.coverage.run]
-branch = true
-source = ["themester", "tests"]
-
-[tool.coverage.report]
-show_missing = true
-fail_under = 80
-
-[tool.mypy]
-strict = true
-warn_unreachable = true
-pretty = true
-show_column_numbers = true
-show_error_codes = true
-show_error_context = true
-
-
-[tool.hatch.envs.safety]
-dependencies = [
-    "safety~=2.3.5",
-]
-
-[tool.hatch.envs.docs-build]
-dependencies = [
-    "sphinx~=4.4.0",
-    "sphinx-autobuild~=2021.3.14",
-    "Pygments~=2.11.2",
-    "pyupgrade~=2.31.0",
-    "furo~=2022.3.4",
-    "myst-parser~=0.17.0",
-    ]
-
-[[tool.hatch.envs.test.matrix]]
-python = ["3.11", "3.12"]
-
-[[tool.hatch.envs.pre-commit.matrix]]
-python = ["3.12"]
-
-[[tool.hatch.envs.mypy.matrix]]
-python = ["3.12"]
-
-[[tool.hatch.envs.safety.matrix]]
-python = ["3.12"]
-
-[[tool.hatch.envs.docs-build.matrix]]
-python = ["3.12"]
-
-[tool.hatch.envs.test.scripts]
-run = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
-lint = "ruff check src/themester tests docs/conf.py && ruff format --check src/themester tests docs/conf.py"
-format = "ruff check --fix src/themester tests docs/conf.py && ruff format src/themester tests docs/conf.py"
-
-[tool.hatch.envs.pre-commit.scripts]
-run = "pre-commit run --all-files --show-diff-on-failure"
-install = "pre-commit install"
-
-[tool.hatch.envs.mypy.scripts]
-run = "mypy src/themester tests docs/conf.py"
-
-[tool.hatch.envs.safety.scripts]
-run = "hatch -e safety.py3.12 dep show requirements | safety check --full-report --stdin"
-
-[tool.hatch.envs.docs-build.scripts]
-run = "sphinx-build docs docs/_build"
-autobuild = "sphinx-autobuild docs docs/_build"
-autonullster = "sphinx-autobuild --port 8088 tests/sphinx/roots/test-nullster-setup tests/sphinx/roots/test-nullster-setup/_build"
-
-[tool.ruff]
-line-length = 88
-extend-select = ['B','B9','C','D','E','F','N','S','W']
-flake8-quotes = {inline-quotes = 'double', multiline-quotes = 'double'}
-target-version = 'py310'
-ignore = ['E203','E501','N802','B009','B010']
-
-[tool.ruff.lint.mccabe]
-max-complexity = 10
-
-[tool.ruff.extend-per-file-ignores]
-"tests/*" = ["S101"]
-"examples/*" = ["S101"]
-
-[tool.ruff.lint.pydocstyle]
-convention = "google"
-
-[tool.ruff.format]
-quote-style = "double"
-indent-style = "space"
-skip-magic-trailing-comma = false
-line-ending = "auto"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "beautifulsoup4",
+    "pytest",
+]
+docs = [
+    "myst-parser",
+    "furo",
+]
+
+
+[tool.uv.sources]
+tdom = { git = "https://github.com/t-strings/tdom", branch = "main" }
