--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,17 +13,19 @@ dependencies = [
     "myst-parser>=4.0.1",
     "sphinx",
     "svcs",
+    "uv-build>=0.8.8",
     "venusian",
 ]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.8.7,<0.9.0"]
+build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
     "beautifulsoup4",
     "pytest",
+    "uv-build"
 ]
 docs = [
     "myst-parser",
